<resources>
    <string name="app_name">Mayur Pai : Visiting Card</string>
    <string name="mayur">Mayur</string>
    <string name="todo">TODO</string>
    <string name="mangalore_karnataka_india">Mangalore, Karnataka, India</string>
    <string name="_91_9611609185">+91 9611609185</string>
    <string name="mayur5pai_gmail_com">mayur5pai@gmail.com</string>
    <string name="computer">Computer Engineering</string>
    <string name="mayur_pai_b_h">Mayur Pai B H</string>
</resources>